# neutron

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  COMPLETION_CHECKLIST.md  CONTRIBUTING.md  EXECUTION_SUMMARY.md  FINAL_BENCHMARK_SUMMARY.md  FRAMEWORK_CONTRACT.md  IMPLEMENTATION_SUMMARY.md  Makefile  QUICKSTART.md  README.md  SECURITY.md  llms.txt
desktop/: Cargo.toml  README.md  package.json
desktop/crates/neutron-desktop/: Cargo.toml
desktop/crates/neutron-desktop-autostart/: Cargo.toml
desktop/crates/neutron-desktop-biometrics/: Cargo.toml
desktop/crates/neutron-desktop-clipboard/: Cargo.toml
desktop/crates/neutron-desktop-deeplink/: Cargo.toml
desktop/crates/neutron-desktop-fs/: Cargo.toml
desktop/crates/neutron-desktop-global-hotkeys/: Cargo.toml
desktop/crates/neutron-desktop-notifications/: Cargo.toml
desktop/crates/neutron-desktop-shell/: Cargo.toml
desktop/crates/neutron-desktop-tray/: Cargo.toml
desktop/crates/neutron-desktop-updater/: Cargo.toml
desktop/crates/neutron-desktop-window-state/: Cargo.toml
desktop/scripts/: generate-icons.mjs  sign-macos.sh  sign-windows.ps1
desktop/signing/: README.md
modelica/: pyproject.toml
modelica/neutron_modelica/: __init__.py  fmi.py  julia_bridge.py  kirchhoff.py
modelica/neutron_sim/: __init__.py
modelica/neutron_sim/ai/: __init__.py  mcp_tool.py  surrogate.py
modelica/neutron_sim/core/: __init__.py  component.py  connector.py  system.py  variable.py
modelica/neutron_sim/fmi/: __init__.py  cosim.py  export.py  import_fmu.py
modelica/neutron_sim/julia/: __init__.py  bridge.py
modelica/neutron_sim/nucleus/: __init__.py  compare.py  load.py  store.py
modelica/neutron_sim/solvers/: __init__.py  auto_select.py  ode.py
modelica/neutron_sim/viz/: __init__.py  phase.py  plot.py
modelica/tests/: test_fluid.py  test_phase1.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase5.py  test_thermal.py
nucleus/: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
nucleus/benches/: concurrent_bench.rs  embedded_bench.rs  phase4_bench.rs  query_bench.rs  specialty_bench.rs  storage_bench.rs
nucleus/fuzz/: Cargo.toml  README.md
nucleus/fuzz/fuzz_targets/: sql_parser.rs  wire_protocol.rs
nucleus/proptest-regressions/storage/: wal.txt
nucleus/scripts/: metrics.sh
nucleus/src/: embedded.rs  integration_tests.rs  lib.rs  main.rs  tls.rs  wasm.rs
nucleus/src/advisor/: mod.rs
nucleus/src/allocator/: mod.rs
nucleus/src/background/: mod.rs
nucleus/src/binary_wire/: connection_handler.rs  decoder.rs  encoder.rs  handshake.rs  mod.rs  query_handler.rs  result_serializer.rs  server.rs
nucleus/src/blob/: mod.rs  wal.rs
nucleus/src/branching/: mod.rs
nucleus/src/cache/: mod.rs
nucleus/src/catalog/: mod.rs
nucleus/src/cli/: mod.rs
nucleus/src/columnar/: mod.rs  segment.rs
nucleus/src/compliance/: mod.rs
nucleus/src/config/: mod.rs  optimizations.rs
nucleus/src/cost/: mod.rs
nucleus/src/datalog/: mod.rs
nucleus/src/distributed/: gen_raft.py  mod.rs  replicator.rs
nucleus/src/document/: doc_wal.rs  mod.rs  tiered.rs
nucleus/src/executor/: admin.rs  aggregate.rs  cache.rs  copy.rs  ddl.rs  dml.rs  expr.rs  helpers.rs  join.rs  meta_persistence.rs  mod.rs  param_subst.rs  project.rs  query.rs  scalar_fns.rs  schema_types.rs  session.rs  txn.rs  types.rs
nucleus/src/fault/: mod.rs
nucleus/src/fts/: fts_wal.rs  mod.rs  tiered.rs
nucleus/src/geo/: mod.rs  wal.rs
nucleus/src/graph/: cypher.rs  cypher_executor.rs  mod.rs  tiered.rs  wal.rs
nucleus/src/inference/: mod.rs
nucleus/src/kv/: collections.rs  collections_wal.rs  mod.rs  streams.rs  tiered.rs
nucleus/src/memory/: mod.rs
nucleus/src/metrics/: mod.rs  optimizations.rs
nucleus/src/planner/: mod.rs
nucleus/src/pool/: async_pool.rs  connection_budget.rs  mod.rs
nucleus/src/procedures/: mod.rs
nucleus/src/pubsub/: mod.rs  streams_wal.rs
nucleus/src/quantum/: mod.rs
nucleus/src/raft/: mod.rs
nucleus/src/reactive/: cdc_wal.rs  mod.rs
nucleus/src/replication/: mod.rs  network.rs
nucleus/src/resp/: encoder.rs  handler.rs  mod.rs  parser.rs  pubsub_registry.rs  server.rs
nucleus/src/runtime/: mod.rs
nucleus/src/security/: mod.rs
nucleus/src/sharding/: mod.rs
nucleus/src/simd/: aggregates.rs  avx2.rs  avx512.rs  mod.rs  scalar.rs
nucleus/src/sparse/: mod.rs
nucleus/src/sql/: mod.rs
nucleus/src/storage/: btree.rs  buffer.rs  buffered_engine.rs  columnar_engine.rs  columnar_wal.rs  compression.rs  disk.rs  disk_engine.rs  encrypted_index.rs  encryption.rs  fsm.rs  granule_stats.rs  io_uring.rs  kv_wal.rs  lsm.rs  lsm_engine.rs  mod.rs  mvcc.rs  mvcc_wal.rs  page.rs  persistence.rs  tuple.rs  txn.rs  wal.rs
nucleus/src/tensor/: mod.rs
nucleus/src/tiered/: mod.rs
nucleus/src/timeseries/: compression.rs  mod.rs
nucleus/src/transport/: mod.rs
nucleus/src/types/: mod.rs
nucleus/src/vector/: mod.rs  tiered.rs  wal.rs
nucleus/src/versioning/: mod.rs
nucleus/src/wire/: compression.rs  error_codec.rs  kv_fast_path.rs  mod.rs
nucleus/tests/: concurrent_stress.rs  crash_recovery.rs  executor_proptest.rs  extreme_stress.rs  pg_compat.rs  sql_edge_cases.rs  stress_test.rs  wal_verify.rs
python/: LICENSE  README.md  pyproject.toml
python/neutron/: __init__.py  __main__.py  app.py  cli.py  config.py  depends.py  error.py  handler.py  middleware.py  openapi.py  response.py  router.py
python/neutron/ai/: __init__.py  agent.py  mcp.py  memory.py  providers.py  rag.py  structured.py  tools.py  workflow.py
python/neutron/auth/: __init__.py  apikey.py  csrf.py  jwt.py  oauth.py  password.py  rbac.py  session.py
python/neutron/cache/: __init__.py  http.py  (+1 more)
python/tests/: conftest.py  test_ai.py  test_app.py  test_auth.py  test_cache.py  test_cli.py  test_config.py  test_depends.py  test_error.py  test_handler.py  test_jobs.py  test_middleware.py  test_nucleus_models.py  test_oauth.py  test_openapi.py  test_realtime.py  test_response.py  test_router.py
quint/conformance/: Cargo.toml  conformance_test.qnt
rs/: Cargo.toml  README.md
rs/bench/: Cargo.toml
(+1579 files in other folders)
