[package]
name = "nucleus"
version = "0.1.0"
edition = "2024"
description = "The definitive database engine"
license = "BSL-1.1"
authors = ["Tyler"]
repository = "https://github.com/neutron-build/neutron"

[dependencies]
aes-gcm = "0.10"
argon2 = "0.5"
async-trait = "0.1"
bytes = "1"
crc32c = "0.6"
futures = "0.3"
parking_lot = "0.12"
pgwire = { version = "0.36", features = ["server-api-aws-lc-rs"] }
rcgen = "0.13"
rustls-pemfile = "2"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlparser = "0.61"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5.58", features = ["derive"] }
base64 = "0.22.1"
toml = "0.8"
core_affinity = "0.8"
rustyline = "14"
lz4_flex = "0.11"
regex = "1.12.3"
tokio-postgres = { version = "0.7" }

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", features = ["html_reports", "async_tokio"] }
proptest = "1"

[[bin]]
name = "pg_compare"
path = "src/bin/pg_compare.rs"

[[bench]]
name = "query_bench"
harness = false

[[bench]]
name = "storage_bench"
harness = false

[[bench]]
name = "specialty_bench"
harness = false

[target.'cfg(target_os = "linux")'.dependencies]
io-uring = "0.6"
