[workspace]
resolver = "2"
members = [
    "crates/neutron",
    "crates/neutron-cli",
    "crates/neutron-grpc",
    "crates/neutron-graphql",
    "crates/neutron-jobs",
    "crates/neutron-nucleus",
    "crates/neutron-inference",
    "crates/neutron-rpc",
    "crates/neutron-config",
    "crates/neutron-redis",
    "crates/neutron-postgres",
    "crates/neutron-oauth",
    "crates/neutron-smtp",
    "crates/neutron-storage",
    "crates/neutron-cache",
    "crates/neutron-otel",
    "crates/neutron-stripe",
    "crates/neutron-webauthn",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Tyler"]
repository = "https://github.com/neutron-build/neutron"

[workspace.dependencies]
# Core async runtime — selective features only (not "full")
# "fs" included for static file serving; remove if binary size is critical
tokio = { version = "1", features = ["rt-multi-thread", "net", "sync", "time", "io-util", "macros", "fs", "signal"] }
hyper = { version = "1", features = ["server", "client", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "http1", "http2"] }
http-body-util = "0.1"
http-body = "1"
http = "1"
tokio-stream = "0.1"
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
serde_urlencoded = "0.7"
flate2 = "1"
brotli = "7"
fastwebsockets = "0.10"
multer = "3"
sha1 = "0.10"
sha2 = "0.10"
hmac = "0.12"
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.22"
rustls = "0.23"
tokio-rustls = "0.26"
rustls-pemfile = "2"
socket2 = { version = "0.5", features = ["all"] }
async-stream = "0.3"
tempfile = "3"
rcgen = "0.13"
criterion = { version = "0.5", features = ["html_reports"] }
matchit = "0.8"
smallvec     = { version = "1", features = ["union"] }
tokio-postgres = { version = "0.7", features = ["with-serde_json-1"] }
futures-util   = "0.3"
# neutron-config
envy    = "0.4"
dotenvy = "0.15"
# neutron-redis
redis = { version = "0.25", features = ["tokio-comp", "connection-manager", "script"] }
# neutron-rpc protobuf codec
prost = "0.12"
# HTTP/3
quinn    = "0.11"
h3       = "0.0.8"
h3-quinn = "0.0.10"
# neutron-oauth: outbound TLS root certificates
webpki-roots = "0.26"
# neutron-smtp
lettre = { version = "0.11", default-features = false, features = ["builder", "smtp-transport", "tokio1", "tokio1-native-tls", "hostname"] }
# neutron-webauthn
p256 = { version = "0.13", features = ["ecdsa"] }
