[package]
name = "nucleus-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.nucleus]
path = ".."

[[bin]]
name = "fuzz_sql_parser"
path = "fuzz_targets/sql_parser.rs"
doc = false

[[bin]]
name = "fuzz_wire_protocol"
path = "fuzz_targets/wire_protocol.rs"
doc = false
