[package]
name = "nucleus-conformance"
version = "0.1.0"
edition = "2024"
license = "BSL-1.1"
description = "Quint spec-to-implementation conformance testing for Nucleus"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"

[dev-dependencies]
# quint-connect = "0.1"  # When available on crates.io
