[workspace]

[package]
name = "neutron-bench"
version = "0.1.0"
edition = "2021"

# NOTE: This package is intentionally NOT a member of the parent workspace.
# External frameworks (axum, actix-web, warp) bring incompatible hyper feature
# flag combinations that would break the workspace build.  Run benchmarks from
# this directory: `cargo bench --bench compare`

[[bench]]
name = "compare"
harness = false

[dependencies]
# Our framework
neutron = { path = "../crates/neutron", default-features = false, features = ["full"] }

# Competitors
axum            = "0.7"
tower           = { version = "0.4", features = ["timeout", "util"] }
tower-http      = { version = "0.5", features = ["trace", "request-id", "util"] }
actix-web       = "4"
warp            = "0.3"
hyper      = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto"] }
http-body-util = "0.1"
http       = "1"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros", "sync", "time"] }

# HTTP client for sending bench requests
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json"] }

# Bench harness
criterion = { version = "0.5", features = ["html_reports"] }
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
bytes       = "1"
