[package]
name = "neutron-desktop-biometrics"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Neutron Desktop TouchID / Windows Hello biometrics plugin"

[dependencies]
tauri = { workspace = true }
tauri-plugin = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
whoami = "1"
