[package]
name = "neutron-desktop-global-hotkeys"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Neutron Desktop system-wide keyboard shortcuts plugin"

[dependencies]
tauri = { workspace = true }
tauri-plugin = { workspace = true }
tauri-plugin-global-shortcut = "2"
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
