[package]
name = "neutron-desktop-notifications"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Neutron Desktop OS notifications plugin"

[dependencies]
tauri = { workspace = true }
tauri-plugin = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
notify-rust = "4"
tokio = { workspace = true }
