[package]
name = "neutron-desktop-updater"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Neutron Desktop auto-update with signature verification and rollback"

[dependencies]
tauri = { workspace = true }
tauri-plugin = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
sha2 = "0.10"
dirs = { workspace = true }
