[package]
name = "neutron-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Neutron Desktop — Tauri 2.0 + Preact desktop framework with neutron:// protocol bridge"

[features]
default = ["nucleus-embedded"]
nucleus-embedded = ["dep:nucleus"]

[dependencies]
tauri = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
http = { workspace = true }
bytes = { workspace = true }
url = { workspace = true }
dirs = { workspace = true }
nucleus = { path = "../../../nucleus", optional = true }
