[package]
name        = "neutron-config"
version.workspace    = true
edition.workspace    = true
license.workspace    = true
repository.workspace = true
description = "Typed environment-based configuration for the Neutron framework"

[dependencies]
serde      = { workspace = true }
serde_json = { workspace = true }
tracing    = { workspace = true }
envy       = { workspace = true }
dotenvy    = { workspace = true, optional = true }

[features]
# Load a .env file before reading environment variables.
dotenv = ["dep:dotenvy"]

[dev-dependencies]
tokio = { workspace = true }
