[package]
name = "neutron-graphql"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "GraphQL HTTP transport addon for Neutron — same handler model"

[dependencies]
neutron          = { path = "../neutron", default-features = false, features = ["json", "ws"] }
serde            = { workspace = true }
serde_json       = { workspace = true }
serde_urlencoded = { workspace = true }
http             = { workspace = true }
futures-util     = { workspace = true }
bytes            = { workspace = true }
tokio            = { workspace = true }
tokio-stream     = { workspace = true }
fastwebsockets   = { workspace = true }

[dev-dependencies]
tokio          = { workspace = true, features = ["rt", "macros"] }
http-body-util = { workspace = true }
