[package]
name = "neutron-grpc"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "gRPC addon for Neutron — same handler model as HTTP"

[dependencies]
neutron    = { path = "../neutron", default-features = false }
bytes      = { workspace = true }
http       = { workspace = true }
http-body  = { workspace = true }
tracing    = { workspace = true }

[dev-dependencies]
tokio          = { workspace = true, features = ["rt", "macros"] }
http-body-util = { workspace = true }
