[package]
name = "neutron-inference"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "ML inference client and streaming response types for Neutron"

[dependencies]
neutron        = { path = "../neutron", default-features = false, features = ["json", "sse"] }
hyper          = { workspace = true }
hyper-util     = { version = "0.1", features = ["tokio", "http1", "http2", "client-legacy"] }
http-body-util = { workspace = true }
http-body      = { workspace = true }
bytes          = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
tokio          = { workspace = true }
tokio-stream   = { workspace = true }
futures-util   = { workspace = true }
async-stream   = { workspace = true }
tracing        = { workspace = true }
http           = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
