[package]
name = "neutron-jobs"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Background job worker addon for Neutron — same handler model as HTTP"

[features]
# Redis-backed job store (uses the `redis` crate with async connection manager)
redis    = ["dep:redis", "dep:hex"]
# PostgreSQL-backed job store (uses tokio-postgres directly)
postgres = ["dep:tokio-postgres"]

[dependencies]
neutron        = { path = "../neutron", default-features = false }
bytes          = { workspace = true }
http           = { workspace = true }
tokio          = { workspace = true, features = ["rt-multi-thread", "sync", "time", "macros"] }
serde          = { workspace = true }
serde_json     = { workspace = true }
tracing        = { workspace = true }

# Optional — enabled by the `redis` feature
redis          = { workspace = true, optional = true }
hex            = { version = "0.4", optional = true }

# Optional — enabled by the `postgres` feature
tokio-postgres = { workspace = true, optional = true }

[dev-dependencies]
http-body-util = { workspace = true }
