[package]
name = "neutron-nucleus"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Nucleus database integration for the Neutron framework"

[dependencies]
neutron        = { path = "../neutron", default-features = false }
tokio-postgres = { workspace = true }
tokio          = { workspace = true }
tracing        = { workspace = true }
http           = { workspace = true }
serde          = { workspace = true }
serde_json     = { workspace = true }
regex          = "1"

[dev-dependencies]
tokio = { workspace = true }
