[package]
name = "neutron-oauth"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "OAuth2/OIDC authorization code flow for the Neutron framework"

[dependencies]
neutron         = { path = "../neutron", default-features = false, features = ["cookie"] }
tokio           = { workspace = true }
hyper           = { workspace = true }
hyper-util      = { workspace = true }
http-body-util  = { workspace = true }
http            = { workspace = true }
bytes           = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
sha2            = { workspace = true }
hmac            = { workspace = true }
rand            = { workspace = true }
base64          = { workspace = true }
rustls          = { workspace = true }
tokio-rustls    = { workspace = true }
webpki-roots    = { workspace = true }
tracing         = { workspace = true }
serde_urlencoded = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
