[package]
name        = "neutron-otel"
version.workspace     = true
edition.workspace     = true
license.workspace     = true
repository.workspace  = true
description = "OpenTelemetry OTLP/JSON tracing exporter for the Neutron web framework"

[dependencies]
tokio      = { workspace = true }
tracing    = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
serde      = { workspace = true }
hyper      = { workspace = true }
hyper-util = { workspace = true }
http-body-util = { workspace = true }
bytes      = { workspace = true }
http       = { workspace = true }
rand       = { workspace = true }
sha2       = { workspace = true }
